<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory 
        android:title="@string/pref_tracing_cat"
        android:key="pref_tracing_cat">
	    <CheckBoxPreference
	        android:key="@string/pref_key_trace"
	        android:title="@string/pref_trace"
	        android:summary="@string/pref_trace_summ"
	        android:defaultValue="false" />
	 </PreferenceCategory>
	 
	 <PreferenceCategory 
        android:title="@string/pref_target_cat"
        android:key="pref_target_cat">
	    <CheckBoxPreference
	        android:key="@string/pref_key_target_textfile"
	        android:title="@string/pref_target_textfile"
	        android:summary="@string/pref_target_textfile_summ"
	        android:defaultValue="false" />
	    <CheckBoxPreference
	        android:key="@string/pref_key_target_intent"
	        android:title="@string/pref_target_intent"
	        android:summary="@string/pref_target_intent_summ"
	        android:defaultValue="true" />
	 </PreferenceCategory>
	 
	 <PreferenceCategory 
        android:title="@string/pref_logging_cat"
        android:key="pref_logging_cat">
	    <!-- 
	    <CheckBoxPreference
	        android:key="@string/pref_key_new_test_listener"
	        android:title="@string/pref_new_test_listener"
	        android:summary="@string/pref_new_test_listener_summ"
	        android:defaultValue="true" />
	     -->
	     
	    <CheckBoxPreference
	        android:key="@string/pref_key_acceleration_listener"
	        android:title="@string/pref_acceleration_listener"
	        android:summary="@string/pref_acceleration_listener_summ"
	        android:defaultValue="true" />
	    <CheckBoxPreference
	        android:key="@string/pref_key_temperature_listener"
	        android:title="@string/pref_temperature_listener"
	        android:summary="@string/pref_temperature_listener_summ"
	        android:defaultValue="true" />
	    <CheckBoxPreference
	        android:key="@string/pref_key_barometer_listener"
	        android:title="@string/pref_barometer_listener"
	        android:summary="@string/pref_barometer_listener_summ"
	        android:defaultValue="true" />
	    <CheckBoxPreference
	        android:key="@string/pref_key_battery_listener"
	        android:title="@string/pref_battery_listener"
	        android:summary="@string/pref_battery_listener_summ"
	        android:defaultValue="true" />
	    <CheckBoxPreference
	        android:key="@string/pref_key_cpu_listener"
	        android:title="@string/pref_cpu_listener"
	        android:summary="@string/pref_cpu_listener_summ"
	        android:defaultValue="true" />
	    <CheckBoxPreference
	        android:key="@string/pref_key_gps_location_listener"
	        android:title="@string/pref_gps_location_listener"
	        android:summary="@string/pref_gps_location_listener_summ"
	        android:defaultValue="true" />
	    <CheckBoxPreference
	        android:key="@string/pref_key_gps_status_listener"
	        android:title="@string/pref_gps_status_listener"
	        android:summary="@string/pref_gps_status_listener_summ"
	        android:defaultValue="true" />
	    <CheckBoxPreference
	        android:key="@string/pref_key_gyroscope_listener"
	        android:title="@string/pref_gyroscope_listener"
	        android:summary="@string/pref_gyroscope_listener_summ"
	        android:defaultValue="true" />
	    <CheckBoxPreference
	        android:key="@string/pref_key_light_listener"
	        android:title="@string/pref_light_listener"
	        android:summary="@string/pref_light_listener_summ"
	        android:defaultValue="true" />
	    <CheckBoxPreference
	        android:key="@string/pref_key_linear_acceleration_listener"
	        android:title="@string/pref_linear_acceleration_listener"
	        android:summary="@string/pref_linear_acceleration_listener_summ"
	        android:defaultValue="true" />
	    <CheckBoxPreference
	        android:key="@string/pref_key_magneto_listener"
	        android:title="@string/pref_magneto_listener"
	        android:summary="@string/pref_magneto_listener_summ"
	        android:defaultValue="true" />
	    <CheckBoxPreference
	        android:key="@string/pref_key_passive_location_listener"
	        android:title="@string/pref_passive_location_listener"
	        android:summary="@string/pref_passive_location_listener_summ"
	        android:defaultValue="true" />
	    <CheckBoxPreference
	        android:key="@string/pref_key_proximity_listener"
	        android:title="@string/pref_proximity_listener"
	        android:summary="@string/pref_proximity_listener_summ"
	        android:defaultValue="true" />
	    <CheckBoxPreference
	        android:key="@string/pref_key_ram_listener"
	        android:title="@string/pref_ram_listener"
	        android:summary="@string/pref_ram_listener_summ"
	        android:defaultValue="true" />
	    <CheckBoxPreference
	        android:key="@string/pref_key_rotation_listener"
	        android:title="@string/pref_rotation_listener"
	        android:summary="@string/pref_rotation_listener_summ"
	        android:defaultValue="true" />
	    <CheckBoxPreference
	        android:key="@string/pref_key_screen_brightness_listener"
	        android:title="@string/pref_screen_brightness_listener"
	        android:summary="@string/pref_screen_brightness_listener_summ"
	        android:defaultValue="true" />
	   	<CheckBoxPreference
	        android:key="@string/pref_key_screen_orientation_listener"
	        android:title="@string/pref_screen_orientation_listener"
	        android:summary="@string/pref_screen_orientation_listener_summ"
	        android:defaultValue="true" />
	    <CheckBoxPreference
	        android:key="@string/pref_key_screen_state_listener"
	        android:title="@string/pref_screen_state_listener"
	        android:summary="@string/pref_screen_state_listener_summ"
	        android:defaultValue="true" />
	    <CheckBoxPreference
	        android:key="@string/pref_key_telephony_listener"
	        android:title="@string/pref_telephony_listener"
	        android:summary="@string/pref_telephony_listener_summ"
	        android:defaultValue="true" />
	    <CheckBoxPreference
	        android:key="@string/pref_key_traffic_listener"
	        android:title="@string/pref_traffic_listener"
	        android:summary="@string/pref_traffic_listener_summ"
	        android:defaultValue="true" />
	    <CheckBoxPreference
	        android:key="@string/pref_key_traffic_speed_listener"
	        android:title="@string/pref_traffic_speed_listener"
	        android:summary="@string/pref_traffic_speed_listener_summ"
	        android:defaultValue="true" />
	     <CheckBoxPreference
	        android:key="@string/pref_key_wifi_listener"
	        android:title="@string/pref_wifi_listener"
	        android:summary="@string/pref_wifi_listener_summ"
	        android:defaultValue="true" />
	    <CheckBoxPreference
	        android:key="@string/pref_key_wifi_state_listener"
	        android:title="@string/pref_wifi_state_listener"
	        android:summary="@string/pref_wifi_state_listener_summ"
	        android:defaultValue="true" />
	    <CheckBoxPreference
	        android:key="@string/pref_key_wifirssi_listener"
	        android:title="@string/pref_wifirssi_listener"
	        android:summary="@string/pref_wifirssi_listener_summ"
	        android:defaultValue="true" />
 	    
	 </PreferenceCategory>
</PreferenceScreen>